Fixes ZEN-2136 by adding overflow to that box. reviewed by jhanson.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@60261 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -1611,3 +1611,6 @@ a.z-entity:hover{
 #evdetail_services{
     margin:10px 0 10px 25px;
 }
+#deviceoverviewpanel_summary-body{
+    overflow:auto !important;
+}
